# avan-c

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
cores/: CMakeLists.txt
cores/base/: CMakeLists.txt
cores/base/include/base/: testsuite.h  types.h
cores/gameboy/: CMakeLists.txt
cores/gameboy/src/: cpu.c  cpu.h  gameboy.c  instructions.c  instructions.h
cores/gameboy/tests/: cpu_tests.c  instructions_tests.c
gameboy/: CMakeLists.txt
gameboy/src/: cpu.c  cpu.h  gameboy.c  instructions.c  instructions.h
gameboy/tests/: cpu_test.c  cpu_tests.c  gameboy_test.c  instructions_test.c  instructions_tests.c
include/: testsuite.h
include/avan/: testsuite.h
src/: main.c
